# machine_translation

./: .gitignore  LICENSE  README.md  evaluate.py  main.py  pyproject.toml  requirements.txt  run.sh  run_vllm.sh  translate-vllm.py  translate.py  translator.py  utils.py
configs/: logging.json
notebooks/: checks.ipynb  dataset.ipynb
src/evaluation/: checks.py  metrics.py
src/translation/: translator.py
