[tool.poetry]
name = "italian-translator"
version = "0.1.0"
description = ""
authors = ["saiteki-kai <giuseppe.magazu@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.5.1"
unbabel-comet = "^2.2.2"
accelerate = "^1.1.1"
transformers = "^4.46.3"
datasets = "^3.1.0"

[tool.poetry.group.dev.dependencies]
huggingface-hub = "^0.26.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
