[tool.poetry]
name = "italian-translator"
version = "0.1.0"
description = ""
authors = ["saiteki-kai <giuseppe.magazu@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.5.1"
unbabel-comet = "^2.2.2"
accelerate = "^1.1.1"
transformers = "^4.46.3"
datasets = "^3.1.0"
tqdm = "^4.67.0"

[tool.poetry.group.dev.dependencies]
huggingface-hub = "^0.26.2"
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"

[tool.ruff]
fix = true
show-fixes = true
line-length = 119
select = [
    "F",
    "E",
    "W",
    "I",
    "C90",
    "UP",
    "S",
    "B",
    "A",
    "COM",
    "C4",
    "T10",
    "RET",
    "ARG",
    "PIE",
    "PGH",
    "TRY",
    "PLR",
    "SIM",
    "PTH",
    "NPY",
    "TCH",
    "RUF",
    "SLF001",
]

[tool.ruff.isort]
lines-after-imports = 2
lines-between-types = 1
combine-as-imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
